# scorep_plugin_ucx

./: .gitmodules  CMakeLists.txt  README.md
include/: plugin_types.h  utils.h
include/scorep/: SCOREP_PublicTypes.h
openmpi-patches/: MPI_Init-Update-to-return-success-if-already-initial.patch
src/: scorep_plugin_ucx.cpp  scorep_plugin_ucx.h  scorep_plugin_ucx_config.h  ucx_sampling.cpp  ucx_sampling.h  utils.cpp
